# Neo

./: README.md  com.github.sheepfarm.neo.json  load_wheels.sh  meson.build  wheels_list.txt
data/: com.github.sheepfarm.neo.desktop.in  com.github.sheepfarm.neo.gschema.xml  com.github.sheepfarm.neo.metainfo.xml.in  com.github.sheepfarm.neo.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: __init__.py  _window.py  field_dialog.py  main.py  meson.build  neo.gresource.xml  neo.in  neo_settings.py  settings.py  settings_dialog.py  spider_dialog.py  window.py  window.ui
wheels/: itemadapter-0.12.2-py3-none-any.whl  parsel-1.10.0-py2.py3-none-any.whl  protego-0.5.0-py3-none-any.whl  queuelib-1.8.0-py3-none-any.whl  requests_file-3.0.0-py2.py3-none-any.whl  scrapy-2.13.3-py3-none-any.whl  twisted-25.5.0-py3-none-any.whl  w3lib-2.3.1-py3-none-any.whl
